Fix collapse menu for navbar
Fixes #40

--- a/assets/css/xela.scss
+++ b/assets/css/xela.scss
@@ -3,10 +3,10 @@
     font-family: colfax-medium, Helvetica, "Helvetica Neue", sans-serif;
 }
 
-.header {
-    background: #444;
-    color: #FFF;
-}
+// .bg-dark {
+//     background: #444;
+//     color: #FFF;
+// }
 
 a {
     color: #444;
@@ -28,7 +28,7 @@ a:hover {
 
 .nav-link:hover {
     color: #FFF;
-    text-decoration: underline;
+    // text-decoration: underline;
 }
 .main-body {
     margin-top: 60px;
